# ros2-cubic-trajectories

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ar_interface/include/ar_interface/ar_interface/msg/: cubic_traj_coeffs.h  cubic_traj_coeffs.hpp  cubic_traj_params.h  cubic_traj_params.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/ar_interface/include/ar_interface/ar_interface/srv/: compute_cubic_traj.h  compute_cubic_traj.hpp
install/ar_interface/share/ament_index/resource_index/package_run_dependencies/: ar_interface
install/ar_interface/share/ar_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ar_interface/share/ar_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  ar_interfaceConfig-version.cmake  ar_interfaceConfig.cmake  export_ar_interface__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ar_interface/share/ar_interface/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/ar_interface/share/ar_interface/msg/: CubicTrajCoeffs.idl  CubicTrajCoeffs.msg  CubicTrajParams.idl  CubicTrajParams.msg
install/ar_interface/share/ar_interface/srv/: ComputeCubicTraj.idl  ComputeCubicTraj.srv  ComputeCubicTraj_Request.msg  ComputeCubicTraj_Response.msg
install/ar_test/share/ar_test/: package.sh  package.xml
log/: latest_build
src/ar_interface/: CMakeLists.txt
src/ar_test/: README.txt  package.xml  setup.py
src/ar_test/ar_test/: compute_cubic_coeffs.py  cubic_traj_planner.py  plot_cubic_traj.py  points_generator.py
src/ar_test/launch/: cubic_traj_gen.launch.py
(+35 files in other folders)
